#ifndef DEVICE_TYPE_HPP
#define DEVICE_TYPE_HPP

enum class DeviceType { 
    BLUETOOTH, 
    WIRED,
    HEADPHONES 
};

#endif // DEVICE_TYPE_HPP